--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "react-devtools": "react-devtools"
   },
   "dependencies": {
+    "@ethersproject/shims": "^5.6.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
+    "ethers": "^5.6.9",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.1"
   },
