--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@ethersproject/shims": "^5.6.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
+    "@reduxjs/toolkit": "^1.8.3",
+    "@types/react-redux": "^7.1.24",
     "ethers": "^5.6.9",
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-get-random-values": "^1.8.0",
     "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.14.1"
+    "react-native-screens": "^3.14.1",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
