--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ethersproject/shims": "^5.6.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.8.3",
     "@types/react-redux": "^7.1.24",
     "ethers": "^5.6.9",
